# cchat

./: .gitignore  AUTHORS  configure.ac
src/: Makefile.am  main.c
src/client/: Makefile.am  main.c
src/common/: Makefile.am  arraylist.c  arraylist.h  basic.h  cstring.c  cstring.h  list.c  list.h  pchar.c  pchar.h  windef.h
src/server/: Makefile.am  chatserver.c  chatserver.h  main.c
tests/: Makefile.am
tests/arraylist/: Makefile.am  arraylist  main.c
tests/list/: Makefile.am  main.c
tests/string/: Makefile.am  main.c
